# entangled-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
entangled-core/: Cargo.toml  LICENSE-MIT  README.md
entangled-core/benches/: pipeline.rs
entangled-core/src/: lib.rs
entangled-core/src/canon/: error.rs  jcs.rs  mod.rs  signature_input.rs
entangled-core/src/crypto/: ed25519.rs  mod.rs  pip.rs  sha256.rs  signing.rs
entangled-core/src/document/: binding.rs  builder.rs  envelope.rs  error.rs  mod.rs  parser.rs  unsigned.rs  verified.rs
entangled-core/src/state/: mod.rs  store.rs  submit.rs
entangled-core/src/tor/: address.rs  binding.rs  error.rs  mod.rs
entangled-core/src/types/: blocks.rs  canary.rs  document.rs  form.rs  inline.rs  keys.rs  link.rs  manifest.rs  meta.rs  mod.rs  path.rs  slug.rs  state.rs  timestamp.rs
entangled-core/src/validation/: blocks.rs  canary.rs  clock.rs  content_index.rs  diagnostic.rs  inline.rs  input.rs  kind.rs  limits.rs  migration.rs  mod.rs  parse.rs  policy_check.rs  schema.rs  state.rs  strings.rs  submit.rs
entangled-core/tests/: clock_skew.rs  closed_schema.rs  keys_and_signatures.rs  paths_and_slugs.rs  roundtrip.rs  timestamps.rs  wire_format.rs
entangled-core/tests/canary/: anti_downgrade.rs  conflict.rs  main.rs  state.rs  structure.rs
entangled-core/tests/canon/: integration_with_types.rs  main.rs  null_rejection.rs  numbers.rs  property_ordering.rs  signature_input.rs  spec_test_vector.rs  strings.rs  structure.rs
entangled-core/tests/common/: mod.rs
entangled-core/tests/conformance/: README.md  corpus.rs  main.rs  runner.rs
entangled-core/tests/crypto/: ed25519_basic.rs  integration_pip_full.rs  main.rs  pip_derivation.rs  pubkey_strict.rs  sha256_basic.rs  signing_envelope.rs
entangled-core/tests/document/: build_parse_roundtrip.rs  cross_kind_rejection.rs  envelope_helpers.rs  fixtures.rs  integration_pip_to_verify.rs  main.rs  parse_pipeline_errors.rs  payload_consistency.rs  tampering_rejected.rs  transaction_binding.rs  type_state.rs  wire_signature_input.rs
entangled-core/tests/state/: helpers.rs  integration_full.rs  main.rs  runtime_superseded.rs  stateless_mode.rs  store_basic.rs  store_cleanup.rs  store_consent.rs  store_mode_preservation.rs  store_request_state.rs  store_set_with_policy.rs  store_storage_cap.rs  submit_body_build.rs  (+1 more)
(+22 files in other folders)
