[package]
name = "entangled-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Entangled v1.0 protocol library — types, validation, signing, verification (WIP)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2"
time = { version = "0.3", default-features = false, features = ["parsing", "formatting", "macros"] }
thiserror = "1"
