[package]
name = "entangled-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Entangled v1.0 protocol — types, validation, canonicalization, signing, and verification."
repository = "https://github.com/samjanny/entangled-api"
homepage = "https://github.com/samjanny/entangled"
documentation = "https://docs.rs/entangled-core"
readme = "README.md"
keywords = ["entangled", "tor", "ed25519", "publishing", "bip39"]
categories = ["cryptography", "encoding", "parser-implementations"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[features]
test-utils = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2"
time = { version = "0.3", default-features = false, features = ["parsing", "formatting", "macros"] }
thiserror = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "zeroize"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
sha3 = { version = "0.10", default-features = false, features = ["std"] }
getrandom = "0.2"
